Added decoding of params
fixed #5